--- a/ca01/templates/index.html
+++ b/ca01/templates/index.html
@@ -2,4 +2,11 @@
 
 {% block title %}Main page{% endblock title %}
 
-{% block body %}<p>This is the main content</p>{% endblock body %}
+{% block body %}
+<p>This is the main content</p>
+<a href="/archer">Archer</a>
+<a href="/efren">Efren</a>
+<a href="/paras">Paras</a>
+<a href="/kelden">Kelden</a>
+<a href="/samir">Samir</a>
+{% endblock body %}
