--- a/ca01/templates/base.html
+++ b/ca01/templates/base.html
@@ -8,7 +8,8 @@
 </head>
 <header>
     <!-- Write our header HERE -->
-    <p>Header</p>
+    <a href="/">Index</a>
+    <a href="/about">About</a>
 </header>
 <body>
     {% block body %}{% endblock body %}
