--- a/ca01/templates/base.html
+++ b/ca01/templates/base.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>{% block title %}{% endblock title %}</title>
 </head>
-<header>
-    <!-- Write our header HERE -->
-    <a href="/">Index</a>
-    <a href="/about">About</a>
-</header>
 <body>
+    <header>
+        <!-- Write our header HERE -->
+        <a href="/">Index</a>
+        <a href="/about">About</a>
+        <a href="/team">Team</a>
+    </header>
+    <main>
     {% block body %}{% endblock body %}
+    </main>
 </body>
 </html>
