--- a/ca01/templates/form.html
+++ b/ca01/templates/form.html
@@ -6,9 +6,9 @@
 <h1>{{ name }}'s Prompt Page</h1>
 <p>{{ prompt }}</p>
 <form id="myform" name='myForm' action="{{ route }}" method="POST" autocomplete="off">
-    <label for="prompt">Prompt: </label>
+    <label for="prompt"></label>
     <input type="text" name="prompt" id="prompt" required>
-    <input type="submit" value="Submit">
+    <!-- <input type="submit" value="Submit"> -->
 </form>
 <p id="textbox"></p>
 
