--- a/ca01/templates/index.html
+++ b/ca01/templates/index.html
@@ -3,7 +3,8 @@
 {% block title %}Main page{% endblock title %}
 
 {% block body %}
-<p>This is the main content</p>
+<h1>Member Pages</h1>
+<p>Click on a page to get a generated answer to a fun prompt!</p>
 <a href="/archer">Archer</a>
 <a href="/efren">Efren</a>
 <a href="/paras">Paras</a>
