--- a/ca01/templates/base.html
+++ b/ca01/templates/base.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <!-- Write our header HERE -->
-        <a href="/">Index</a>
+        <a href="/">Prompts</a>
         <a href="/about">About</a>
         <a href="/team">Team</a>
     </header>
