--- a/ca01/templates/about.html
+++ b/ca01/templates/about.html
@@ -4,6 +4,7 @@
 About
 {% endblock title %}
 {% block body %}
-    <h1>About</h1>
-    <p>Our project is a GPT based web app which accepts some text, adds a prompt to the front, sends it to gpt, and returns the response</p>
+<h1>About</h1>
+<p>Our project is a GPT based web app which accepts some text, adds a prompt to the front, sends it to gpt, and returns
+    the response</p>
 {% endblock body %}
