--- a/ca01/templates/team.html
+++ b/ca01/templates/team.html
@@ -17,7 +17,7 @@ Team
 </div>
 <div id="user">
     <h3>Paras Pandey</h3>
-    <p>I completed the about page</p>
+    <p>I completed the about page and added somne inforamtions in the page</p>
 </div>
 <div id="user">
     <h3>Firstname lastname</h3>
