--- a/ca01/templates/team.html
+++ b/ca01/templates/team.html
@@ -9,26 +9,22 @@ Team
 
 <div id="user">
     <h3>Archer Heffern</h3>
-    <p>I completed several key tasks in developing our project, including creating the necessary pages (about, index,
-        and form) and routes. I also took care of configuring the project structure and setup, including creating a
-        virtual environment for development. In addition, I created custom styles to ensure a cohesive look and feel
-        across the website. Finally, I documented my work by writing a comprehensive README.md file that provides clear
-        instructions on how to use the project.</p>
+    <p>I completed several key tasks in developing our project, including creating the necessary pages (index, form) and routes. I also took care of configuring the project structure and setup, including creating a virtual environment for development. In addition, I created custom styles to ensure a cohesive look and feel across the website. Finally, I documented my work by writing a comprehensive README.md file that provides clear instructions on how to use the project.</p>
 </div>
 <div id="user">
     <h3>Paras Pandey</h3>
     <p>I completed the about page and added somne inforamtions in the page</p>
 </div>
 <div id="user">
-    <h3>Firstname lastname</h3>
+    <h3>Efen Haskell</h3>
     <p>I completed ___ and did ___</p>
 </div>
 <div id="user">
-    <h3>Firstname lastname</h3>
+    <h3>Samir Rajani</h3>
     <p>I completed ___ and did ___</p>
 </div>
 <div id="user">
-    <h3>Firstname lastname</h3>
+    <h3>Kelden Dorji</h3>
     <p>I completed ___ and did ___</p>
 </div>
 {% endblock body %}
