--- a/ca01/templates/team.html
+++ b/ca01/templates/team.html
@@ -13,7 +13,7 @@ Team
 </div>
 <div id="user">
     <h3>Paras Pandey</h3>
-    <p>I completed the about page and added somne inforamtions in the page</p>
+    <p>I completed the about page and added some informations in the pages</p>
 </div>
 <div id="user">
     <h3>Efen Haskell</h3>
