--- a/ca01/templates/team.html
+++ b/ca01/templates/team.html
@@ -9,7 +9,7 @@ Team
 
 <div id="user">
     <h3>Archer Heffern</h3>
-    <p>I completed several key tasks in developing our project, including creating the necessary pages (index, form) and routes. I also took care of configuring the project structure and setup, including creating a virtual environment for development. In addition, I created custom styles to ensure a cohesive look and feel across the website. Finally, I documented my work by writing a comprehensive README.md file that provides clear instructions on how to use the project.</p>
+    <p>index, form pages + routes. Configured project structure and setup, including a virtual environment. Custom styles. Wrote a README.md file that provides clear instructions on how to use the project. held meetings</p>
 </div>
 <div id="user">
     <h3>Paras Pandey</h3>
