--- a/ca01/templates/team.html
+++ b/ca01/templates/team.html
@@ -17,7 +17,7 @@ Team
 </div>
 <div id="user">
     <h3>Efen Haskell</h3>
-    <p>I completed ___ and did ___</p>
+    <p>I added a prompt to the repl page and put extra information in the about page.</p>
 </div>
 <div id="user">
     <h3>Samir Rajani</h3>
