--- a/ca01/templates/about.html
+++ b/ca01/templates/about.html
@@ -6,5 +6,8 @@ About
 {% block body %}
 <h1>About</h1>
 <p>Our project is a GPT based web app which accepts some text, adds a prompt to the front, sends it to gpt, and returns
-    the response</p>
+    the response.
+    Each author's page provides a different prompt for the user to interact with.
+    Navigating to the Team page provides information about our group members.
+</p>
 {% endblock body %}
