--- a/ca01/templates/team.html
+++ b/ca01/templates/team.html
@@ -21,7 +21,7 @@ Team
 </div>
 <div id="user">
     <h3>Samir Rajani</h3>
-    <p>I completed ___ and did ___</p>
+    <p>I completed code for the prompt and added to the team page</p>
 </div>
 <div id="user">
     <h3>Kelden Dorji</h3>
