--- a/ca01/templates/team.html
+++ b/ca01/templates/team.html
@@ -25,6 +25,6 @@ Team
 </div>
 <div id="user">
     <h3>Kelden Dorji</h3>
-    <p>I completed ___ and did ___</p>
+    <p>I completed some code for the prompt and some info in the about page</p>
 </div>
 {% endblock body %}
